Fix some content overflows

--- a/css/style.css
+++ b/css/style.css
@@ -835,7 +835,6 @@ img {
     margin: 0;
     padding: 0;
 
-    justify-content: space-between;
     flex-wrap: wrap;
 
     list-style: none;
@@ -844,9 +843,15 @@ img {
 .catalog__item {
     position: relative;
 
-    width: 220px;
+    width: 218px;
     border: 1px solid #e6e6e6;
     margin-bottom: 20px;
+    margin-right: 20px;
+    padding-bottom: 10px;
+}
+
+.catalog__item:nth-child(3n) {
+    margin-right: 0;
 }
 
 .catalog__item--new::before {
@@ -886,7 +891,9 @@ img {
 
 .goods-card__actions {
     display: none;
+    box-sizing: border-box;
     height: 150px;              /* такая же, как .goods-card__image*/
+    padding-top: 15px;
 }
 
 .goods-card__link {
@@ -914,6 +921,7 @@ img {
 .goods-card__price--old {
     color: #999999;
     text-decoration-line: line-through;
+    word-break: break-all;
 }
 
 .goods-card__price--new {
@@ -1121,11 +1129,13 @@ img {
 .contacts__feedback-link {
     display: inline-block;
 
-    height: 38px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    /* height: 38px; */
+    /* line-height: 38px; */
 
     color: #ffffff;
     font-size: 14px;
-    line-height: 38px;
     text-transform: uppercase;
 
     background-color: #ef3341;
@@ -1194,11 +1204,12 @@ img {
     display: flex;
 
     margin-bottom: 32px;
+
+    justify-content: space-between;
 }
 
 .main-footer__logo {
     width: 220px;
-    height: 64px;
     margin-right: auto;
 
     font-size: 30px;
@@ -1210,7 +1221,9 @@ img {
 .main-footer__main-nav-list {
     display: flex;
 
+    max-width: 710px;
     margin: 0;
+    padding: 0;
     padding-bottom: 0;
 
     align-items: flex-end;
@@ -1245,6 +1258,8 @@ img {
     display: flex;
 
     padding-bottom: 52px;
+
+    justify-content: space-between;
 }
 
 .main-footer__address {
@@ -1259,6 +1274,7 @@ img {
 .main-footer__catalog-nav-list {
     display: flex;
 
+    max-width: 560px;
     margin: 0;
     padding-left: 0;
 
